@@ -115,12 +115,15 @@ tokens { SEMPRED; TOKEN_REF; RULE_REF; LEXER_CHAR_SET; ARG_ACTION; }
  THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 package org.antlr.v4.parse;
+import org.antlr.v4.tool.*;
 }
 
 
 @members {
     public CommonTokenStream tokens; // track stream we push to; need for context info
     public boolean isLexerRule = false;
+
+	public void grammarError(ErrorType etype, org.antlr.runtime.Token token, Object... args) { }
 
 	/** scan backwards from current point in this.tokens list
 	 *  looking for the start of the rule or subrule.
